# ync_AI_repo

./: README.md  pyproject.toml
Models/ML_models/seq2seq/: seq2seq_1.py
